<resources>
    <!--APP-->
    <string name="app_name">InfoSaude</string>
    <string name="alert_button_ok">OK</string>
    <string name="txt_mostrar_busca">Clique aqui para mostrar ou ocultar os campos de busca</string>
    <string name="alert_loading">Carregando...</string>
    <string name="url_base">http://mobile-aceite.tcu.gov.br/</string>
    <string name="alert_doing_request">Aguarde alguns instantes!</string>

    <!--REMEDIO-->
    <string name="btn_txt_buscar_remedio">Remédios</string>
    <string name="btn_txt_buscar_servico">Serviços Especializados</string>
    <string name="txt_buscar_remedio">Digite o remédio a ser buscado</string>
    <string name="txt_quantidade">Digite a quantidade de itens da pesquisa</string>
    <string name="txt_preco">Digite o preço</string>

    <!--ESTABELECIMENTO-->
    <string name="txt_buscar_estabelecimento">Nome do Estabelecimento</string>
    <string name="txt_municipio">Município</string>
    <string name="txt_uf">UF</string>
    <string name="txt_categoria">Categoria</string>
    <string name="txt_especialidade">Especialidade</string>
    <string name="btn_txt_buscar_estabelecimento">Estabelecimentos de Saúde</string>
</resources>
