<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/corContainerBusca">

        <Button
            android:id="@+id/bt_est_mostrar_busca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_mostrar_busca"
            android:textAlignment="center"
            android:textSize="10dp"
            android:background="@color/corContainerBusca"/>

        <LinearLayout
            android:id="@+id/ll_est_busca_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/corContainerBusca">

            <EditText
                android:id="@+id/et_est_nome_estabelecimento"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_buscar_estabelecimento"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_est_municipio"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_municipio"/>

                <EditText
                    android:id="@+id/et_est_uf"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_uf"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_est_categoria"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_categoria"/>

                <EditText
                    android:id="@+id/et_est_especialidade"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_especialidade"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_est_quantidade_itens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_quantidade"/>

            <Button
                android:id="@+id/bt_buscar_estabelecimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Buscar"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/corTemaAplicativo"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_lista_estabelecimento"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"/>
</LinearLayout>
